--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
+tqdm
 yagmail==0.11.224
-tensorflow==2.1.0
 pandas==1.0.3
-torch==1.4.0
-tqdm==4.44.0
+torch==1.5.0
+torchvision==0.6.0
+-f https://download.pytorch.org/whl/torch_stable.html
 transformers==2.7.0
 numpy==1.18.1
-apex==0.9.10dev
-ptvsd==4.3.2
 tensorboardX==2.0
+tensorflow==2.1.0
